--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,8 +1,12 @@
 Changelog for Health Check
 
 [Golang]
-This build on Golang Version: go version go1.20.4
+This build on Golang Version: go version go1.22.0
 
+
+[1.5] 2024-03-1
+1- Update Go version
+2- Add progress bar instead showing the checks during the run
 
 
 [1.4.2] 2023-12-22
